--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,8 @@
+2008-04-20  Bruno Haible  <bruno@clisp.org>
+
+	* xgettext.c (usage): Clarify single-letter options that take an
+	optional argument: -c, -k, -m, -M.
+
 2008-04-16  Bruno Haible  <bruno@clisp.org>
 
 	* msginit.c (catalogname_for_locale): Add entries for Maori, Uighur.
