--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,5 +1,39 @@
 2008-04-20  Bruno Haible  <bruno@clisp.org>
 
+	Improve error message.
+	* xgettext.h (lexical_context_ty): New type.
+	(non_ascii_error_message): New declaration.
+	(from_current_source_encoding): Add lcontext argument.
+	* xgettext.c (non_ascii_error_message): New function.
+	(from_current_source_encoding): Add lcontext argument. Use
+	non_ascii_error_message.
+	(CONVERT_STRING): Add lcontext argument.
+	(remember_a_message, remember_a_message_plural): Update.
+	* x-csharp.c (lexical_context): New variable.
+	(phase2_getc): Use non_ascii_error_message.
+	(comment_start, comment_line_end, phase6_get): Set lexical_context.
+	(extract_csharp): Initialize lexical_context.
+	* x-java.c (struct string_buffer): Add lcontext field.
+	(init_string_buffer): Add lcontext argument.
+	(string_buffer_flush_curr_buffer): Update from_current_source_encoding
+	call.
+	(comment_start): Set lcontext.
+	(phase5_get): Pass lcontext argument.
+	* x-perl.c (get_here_document, phase2_getc,
+	extract_quotelike_pass1_utf8): Pass lcontext argument.
+	* x-python.c (lexical_context): New variable.
+	(phase2_getc): Use non_ascii_error_message.
+	(comment_start, comment_line_end, phase6_get): Set lexical_context.
+	(struct mixed_string_buffer): Add lcontext field.
+	(init_mixed_string_buffer): Add lcontext argument.
+	(mixed_string_buffer_flush_curr_buffer): Update
+	from_current_source_encoding call.
+	(phase5_get): Set lexical_context. Pass lcontext argument.
+	(extract_python): Initialize lexical_context.
+	Reported by Mark Weyer.
+
+2008-04-20  Bruno Haible  <bruno@clisp.org>
+
 	* xgettext.c (usage): Clarify single-letter options that take an
 	optional argument: -c, -k, -m, -M.
 
