--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,8 @@
+2008-04-20  Bruno Haible  <bruno@clisp.org>
+
+	* autopoint.in: Check that really all CVS directories are removed.
+	Reported by Jim Meyering <jim@meyering.net>.
+
 2008-01-18  Bruno Haible  <bruno@clisp.org>
 
 	* autopoint.in (xver): Make its computation more robust.
