--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,10 @@
+2008-04-25  Bruno Haible  <bruno@clisp.org>
+
+	* lang-table.c (language_table): Add Beja. Remove Adangme, Banda,
+	Batak. Update Scottish Gaelic, Central Khmer, Romansh.
+	* msginit.c (catalogname_for_locale: Add Beja. Remove Banda, Batak.
+	Update Scottish Gaelic, Central Khmer, Romansh.
+
 2008-04-20  Bruno Haible  <bruno@clisp.org>
 
 	Improve error message.
