--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,12 @@
+2008-05-07  Bruno Haible  <bruno@clisp.org>
+
+	Fix editing of plural forms.
+	* po-mode.el (po-mode-version-string): Bump to 2.11.
+	(po-any-msgstr-block-regexp): Must start with msgstr or msgstr[0];
+	needed for re-search-backward.
+	(po-get-msgstr-flavor): Set the point to po-start-of-msgstr-form, not
+	to the beginning of the line.
+
 2008-04-20  Bruno Haible  <bruno@clisp.org>
 
 	* autopoint.in: Check that really all CVS directories are removed.
