--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -11,6 +11,7 @@
 	needed for re-search-backward.
 	(po-get-msgstr-flavor): Set the point to po-start-of-msgstr-form, not
 	to the beginning of the line.
+	Reported by Stéphane Raimbault <stephane.raimbault@gmail.com>.
 
 2008-04-20  Bruno Haible  <bruno@clisp.org>
 
