--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-05-08  Bruno Haible  <bruno@clisp.org>
+
+	* sk.po: Update from Marcel Telka <marcel@telka.sk>.
+	* sv.po: Update from Jan Djärv <jan.h.d@swipnet.se>.
+
 2008-01-10  Bruno Haible  <bruno@clisp.org>
 
 	* pt.po: Update from Helder Correia <helder.pereira.correia@gmail.com>.
