--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,8 @@
+2008-05-10  Bruno Haible  <bruno@clisp.org>
+
+	* lib/linebreak.c.diff: Remove file.
+	* Makefile.am (EXTRA_DIST): Remove it.
+
 2008-01-13  Bruno Haible  <bruno@clisp.org>
 
 	New configure option --disable-curses.
