--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-05-10  Bruno Haible  <bruno@clisp.org>
+
+	* autogen.sh (GNULIB_MODULES_TOOLS_FOR_SRC): Replace linebreak with
+	unilbrk/ulc-width-linebreaks.
+	(GNULIB_MODULES_LIBGETTEXTPO): Likewise. 
+
 2008-04-20  Bruno Haible  <bruno@clisp.org>
 
 	* m4/libtool.m4: Update from libtool-2.2.2, with modifications:
