--- a/gettext-tools/m4/ChangeLog
+++ b/gettext-tools/m4/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-13  Bruno Haible  <bruno@clisp.org>
+
+	* locale-ja.m4 (gt_LOCALE_JA): Check that the locale encoding is not
+	ASCII. Needed for OpenBSD 4.0.
+
 2007-11-07  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.17 released.
