--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,10 @@
+2008-05-16  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-tools/src/msgl-iconv.c (iconvable_prev_msgid): Fix typo.
+	Reported by Karl Eichwalder <ke@novell.com>
+	via Philipp Thomas <pth@novell.com>
+	at <https://bugzilla.novell.com/show_bug.cgi?id=391372>.
+
 2008-05-10  Bruno Haible  <bruno@clisp.org>
 
 	* write-po.c: Include unilbrk.h instead of linebreak.h.
