--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-05-22  Bruno Haible  <bruno@clisp.org>
+
+	* README.woe32: Add a note about the libiconv dependency.
+	Reported by Marko Lindqvist <cazfi74@gmail.com>.
+
 2008-05-18  Bruno Haible  <bruno@clisp.org>
 
 	* m4/libtool.m4: Update from libtool-2.2.4, with modifications:
