--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,8 @@
+2008-05-25  Bruno Haible  <bruno@clisp.org>
+
+	* po-mode.el (po-replace-revision-date): Return nil.
+	Patch by Kobayashi Noritada <nori1@dolphin.c.u-tokyo.ac.jp>.
+
 2008-05-07  Bruno Haible  <bruno@clisp.org>
 
 	* po-mode.el (po-team-name-to-code): Add Beja. Remove Adangme, Banda,
