Make it compile with current mingw.

--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,9 @@
+2008-05-27  Bruno Haible  <bruno@clisp.org>
+
+	* localename.c (SUBLANG_TIBETAN_BHUTAN): Force value 2. Needed for
+	current mingw.
+	Reported by Jose E. Marchesi <jemarch@gnu.org>.
+
 2008-04-21  Bruno Haible  <bruno@clisp.org>
 
 	* localename.c (SUBLANG_TIBETAN_PRC, SUBLANG_TIBETAN_BHUTAN): Actually
