--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-01  Bruno Haible  <bruno@clisp.org>
+
+	* lang-smalltalk: Avoid test failure with gst-3.0.3 on MacOS X.
+
 2008-05-26  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-8: New file.
