Patch from glibc. Unlock locks in opposite order of locking.

--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,9 @@
+2008-03-30  Ulrich Drepper  <drepper@redhat.com>
+
+	[BZ #5443]
+	* dcigettext.c (__dcigettext): Get reader lock for locale data before
+	looking for translation.
+
 2008-03-30  Jakub Jelinek  <jakub@redhat.com>
 
 	* dcigettext.c (_nl_find_msg): Reread nconversions after acquiring
