--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* msggrep.texi: Drop leading whitespace.
+
 2008-05-18  Bruno Haible  <bruno@clisp.org>
 
 	* gettext.texi (Names): Recommend the gnulib module 'propername'.
