--- a/gettext-tools/libgettextpo/ChangeLog
+++ b/gettext-tools/libgettextpo/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-19  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (EXTRA_DIST): Add gnulib-m4/gnulib-cache.m4.
+
 2008-05-26  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-po.c (po_header_field, po_header_set_field): Recognize a
