--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,8 @@
+2008-08-07  Paolo Bonzini  <bonzini@gnu.org>
+
+	* lock.c (glthread_recursive_lock_init_multithreaded)
+	[!PTHREAD_RECURSIVE_MUTEX_INITIALIZER]: Fix typo.
+
 2008-08-03  Bruno Haible  <bruno@clisp.org>
 
 	Additional non-aborting API for lock.
