--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,9 @@
+2008-08-13  Sven Joachim  <svenjoac@gmx.de>
+
+	* po-mode.el (po-check-file-header): Use forward-line with
+	negative argument instead of previous-line.
+	(po-add-attribute): Use forward-line instead of next-line.
+
 2008-05-25  Bruno Haible  <bruno@clisp.org>
 
 	* po-mode.el (po-replace-revision-date): Return nil.
