--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-14  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (distcheck-hook): Update check of lock.h and lock.c.
+
 2008-05-22  Bruno Haible  <bruno@clisp.org>
 
 	* README.woe32: Add a note about the libiconv dependency.
