--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,5 +1,12 @@
 2008-08-14  Bruno Haible  <bruno@clisp.org>
 
+	* format-python.c (format_check): Require the same number of unnamed
+	arguments also when !equality.
+	Reported by Alexander Dupuy <alex.dupuy@mac.com> in
+	<http://savannah.gnu.org/bugs/?24025>.
+
+2008-08-14  Bruno Haible  <bruno@clisp.org>
+
 	* msgmerge.c: Include "glthread/lock.h" instead of "lock.h".
 
 2008-08-03  Bruno Haible  <bruno@clisp.org>
