--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-15  Bruno Haible  <bruno@clisp.org>
+
+	* format-python-2: Check that %.0s normally behaves like %s.
+
 2008-06-01  Bruno Haible  <bruno@clisp.org>
 
 	* lang-bash: Add note about failure on MacOS X.
