--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-16  Bruno Haible  <bruno@clisp.org>
+
+	* x-php.c (extract_balanced): Fix small bug in 2007-03-17 commit.
+
 2008-08-15  Bruno Haible  <bruno@clisp.org>
 
 	* format-python.c (format_parse): For %.0s and %.0r, set the type to
