--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,8 @@
+2008-08-16  Bruno Haible  <bruno@clisp.org>
+
+	* xgettext-python-1: Test that strings inside [ ] are not extracted for
+	an outer gettext call.
+
 2008-08-15  Bruno Haible  <bruno@clisp.org>
 
 	* format-python-2: Check that %.0s normally behaves like %s.
