--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,8 @@
+2008-08-17  Bruno Haible  <bruno@clisp.org>
+
+	* configure.ac: Adapt AC_C_BIGENDIAN invocation to autoconf 2.62: make
+	it work for universal binary builds on MacOS X.
+
 2008-04-20  Bruno Haible  <bruno@clisp.org>
 
 	* configure.ac: Use LT_INIT instead of AC_PROG_LIBTOOL.
