--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-17  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (distcheck-hook): Also compare threadlib.m4.
+
 2008-08-14  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (distcheck-hook): Update check of lock.h and lock.c.
