Add threadlib.m4 to the file list.

--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-17  Bruno Haible  <bruno@clisp.org>
+
+	* gettext.texi (aclocal): Add threadlib.m4 to the file list.
+
 2008-08-15  Bruno Haible  <bruno@clisp.org>
 
 	* gettext.texi (Python): Recommend format strings with named arguments.
