--- a/gettext-tools/m4/ChangeLog
+++ b/gettext-tools/m4/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-17  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (aclocal_DATA): Add threadlib.m4.
+
 2008-01-13  Bruno Haible  <bruno@clisp.org>
 
 	* locale-ja.m4 (gt_LOCALE_JA): Check that the locale encoding is not
