--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,5 +1,9 @@
 2008-08-18  Bruno Haible  <bruno@clisp.org>
 
+	* threadlib.c: Include <pthread.h>.
+
+2008-08-18  Bruno Haible  <bruno@clisp.org>
+
 	* lock.h [USE_SOLARIS_THREADS]: Fix glthread_recursive_lock_* macros.
 	* lock.c (glthread_recursive_lock_destroy_multithreaded): Fix syntax
 	error.
