--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,18 @@
+2008-08-23  Bruno Haible  <bruno@clisp.org>
+
+	Fix behaviour of "msgmerge --update" when sorting is requested and
+	obsolete messages are present.
+	* write-catalog.h (struct catalog_output_format): New field
+	'sorts_obsoletes_to_end'.
+	* write-po.c (output_format_po): Initialize it to true.
+	* write-properties.c (output_format_properties): Initialize it to false.
+	* write-stringtable.c (output_format_stringtable): Likewise.
+	* msgmerge.c (msgdomain_list_stablesort_by_obsolete): New function.
+	(main): Before testing whether the result is the same as the old
+	contents, sort the result using msgdomain_list_stablesort_by_obsolete.
+	Reported by Vincent Danjean <vdanjean.abo@free.fr>
+	via <http://savannah.gnu.org/bugs/?24123>.
+
 2008-08-16  Bruno Haible  <bruno@clisp.org>
 
 	* x-python.c (enum token_type_ty): New values token_type_lbracket,
