--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-30  Bruno Haible  <bruno@clisp.org>
+
+	* autogen.sh (GNULIB_MODULES_LIBGETTEXTPO): Add open.
+
 2008-08-17  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (distcheck-hook): Also compare threadlib.m4.
