--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-31  Bruno Haible  <bruno@clisp.org>
+
+	* autogen.sh (GNULIB_MODULES_TOOLS_FOR_SRC): Add sigprocmask.
+
 2008-08-30  Bruno Haible  <bruno@clisp.org>
 
 	* autogen.sh (GNULIB_MODULES_LIBGETTEXTPO): Add open.
