--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,8 @@
+2008-08-31  Bruno Haible  <bruno@clisp.org>
+
+	* msgexec.c: Include <signal.h>.
+	(main): Block SIGPIPE for the duration of the processing.
+
 2008-08-23  Bruno Haible  <bruno@clisp.org>
 
 	Fix behaviour of "msgmerge --update" when sorting is requested and
